[package]
name = "eve"
version = "0.1.0"
authors = ["Neema <neema.brown@proton.me>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[patch.crates-io]
once_cell = { path = "./once_cell" }

[dependencies]
heapless = { version = "0.8", features = ["portable-atomic-critical-section"] }
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.47", default-features = false }
once_cell = { version = "1.19", path = "./once_cell", default-features = false, features = [
    "std",
    "critical-section",
    "parking_lot",
] }
slint = { version = "1.3", default-features = false, features = [
    "unsafe-single-threaded",
    "libm",
    "compat-1-2",
    "renderer-software",
] }

[build-dependencies]
embuild = "0.31"
